--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html,
+body {
+    height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app {
+    background-color: purple;
+    color: white;
+    font-family: "Open Sans", sans-serif;
+    height: 100vh;
+    text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header {
+    font-size: calc(20px + 2vmin);
+    line-height: 2;
+    text-transform: capitalize;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.timer {
+    background-color: rgba(255, 255, 255, 0.1);
+    display: inline-block;
+    margin-top: 25px;
+    padding: 10px;
+    text-align: center;
+    width: 400px;
+}
+
+.col-4 {
+    width: 25%;
+    float: left;
+}
+
+.box {
+    border-right: solid 1px rgba(255, 255, 255, 0.2);
+    font-weight: 300;
+    padding: 10px;
+}
+
+.col-4:last-child .box {
+    border-right-color: transparent;
+}
+
+.box p {
+    font-size: calc(16px + 2vmin);
+    margin: 0;
+}
+
+.text {
+    font-size: 14px;
 }
