--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body {
 }
 
 .app {
-    background-color: purple;
+    background: blue;
     color: white;
     font-family: "Open Sans", sans-serif;
     height: 100vh;
